--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Баярын мэнд хөөрхөнөө</title>
+    <title>Баярын мэнд синглэчүүдээ</title>
     <style>
         body {
             background-color: black;
@@ -45,7 +45,7 @@
     <script>
         function createMessage() {
             let msg = document.createElement("div");
-            msg.innerText = "Баярын мэнд хөөрхөнөө!";
+            msg.innerText = "Баярын мэнд синглэчүүдээ!";
             msg.classList.add("message");
 
             // Санамсаргүй байрлал
